Bug 361456 - backward search fills up status bar
Summary: backward search fills up status bar
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: user interface (other bugs)
Version First Reported In: 2.9.60
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michel Ludwig
URL: https://wwwtcs.inf.tu-dresden.de/~die...
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-06 13:45 UTC by Flupp
Modified: 2016-12-23 10:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Flupp 2016-04-06 13:45:11 UTC
Every time I jump to a specific line using backward search (e.g. from Okular), parts of kile’s statusbar are duplicated. After some backward searches, the window is resized with every new backward search in order to fit the statusbar content.

Reproducible: Always

Steps to Reproduce:
0. show statusbar
1. compile document using synctex
2. perform a backward search
3. observe kile’s statusbar

Actual Results:  
status bar fills up

Expected Results:  
Just the current content of the status bar should be updated.

I use Arch Linux and installed the AUR package kile-git, but removed the dependency to okular-frameworks-git. I installed version v2.1.r585.g3bf485d-1.

cf. https://aur.archlinux.org/packages/kile-git/
Comment 1 Michel Ludwig 2016-12-23 10:51:35 UTC
Git commit 6bc73338c5eae2fc7974d9b4fc6d1899ecffc450 by Michel Ludwig.
Committed on 23/12/2016 at 10:49.
Pushed by mludwig into branch 'master'.

Don't add status bar labels again in 'StatusBar::reset'

M  +12   -13   src/kile.cpp
M  +64   -48   src/widgets/statusbar.cpp
M  +16   -10   src/widgets/statusbar.h

https://commits.kde.org/kile/6bc73338c5eae2fc7974d9b4fc6d1899ecffc450