Don't add status bar labels again in 'StatusBar::reset'

BUG: 361456